--- a/Tiles/app/src/main/res/layout/activity_main.xml
+++ b/Tiles/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,16 @@
         android:layout_alignParentStart="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content" />
+
+    <GridView
+        android:id="@+id/myGrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:numColumns="3"
+        android:stretchMode="columnWidth"
+
+        android:gravity="center"
+        android:layout_below="@+id/button1"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
