--- a/Tiles/app/src/main/res/layout/activity_main.xml
+++ b/Tiles/app/src/main/res/layout/activity_main.xml
@@ -10,30 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.saurabhpathak.tiles.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/mainActivityTextView" />
-
-    <Button
-        android:text="Button"
-        android:layout_marginTop="42dp"
-        android:id="@+id/button1"
-        android:layout_below="@+id/mainActivityTextView"
-        android:layout_alignParentStart="true"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
-
     <GridView
         android:id="@+id/myGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:numColumns="3"
+        android:numColumns="4"
         android:stretchMode="columnWidth"
 
         android:gravity="center"
-        android:layout_below="@+id/button1"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/chronometer"
+        android:layout_alignParentStart="true" />
+
+    <Chronometer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:id="@+id/chronometer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp" />
 </RelativeLayout>
