--- a/Tiles/app/src/main/res/layout/tile_layout.xml
+++ b/Tiles/app/src/main/res/layout/tile_layout.xml
@@ -7,6 +7,6 @@
         android:id="@+id/tileBtn"
         android:layout_below="@+id/mainActivityTextView"
         android:layout_alignParentStart="true"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:layout_height="@dimen/tile_size"
+        android:layout_width="@dimen/tile_size" />
 </LinearLayout>
