--- a/Tiles/app/src/main/res/layout/activity_main.xml
+++ b/Tiles/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,25 @@
         android:stretchMode="columnWidth"
 
         android:gravity="center"
-        android:layout_below="@+id/chronometer"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
+        android:id="@+id/clickCount"
+        android:textStyle="bold"
+        android:layout_alignBaseline="@+id/chronometer"
+        android:layout_alignBottom="@+id/chronometer"
+        android:layout_alignParentEnd="true" />
 
     <Chronometer
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
         android:id="@+id/chronometer"
+        android:layout_marginStart="11dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
