--- a/Tiles/app/src/main/res/values/dimens.xml
+++ b/Tiles/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tile_size">70dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
