Adding score view

--- a/Tiles/app/src/main/res/layout/activity_main.xml
+++ b/Tiles/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,13 @@
         android:layout_marginStart="11dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/tv_winStatus" />
 </RelativeLayout>
