--- a/Tiles/app/src/main/res/values/colors.xml
+++ b/Tiles/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="tile_color">#4286f4</color>
+    <color name="tile_matched">#8CC276</color>
 </resources>
