--- a/Tiles/app/src/main/res/drawable/btn_gradient.xml
+++ b/Tiles/app/src/main/res/drawable/btn_gradient.xml
@@ -2,8 +2,8 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
         <gradient
-            android:startColor="#EA8FE7"
-            android:endColor="#FC90CC"
+            android:startColor="@color/tile_gradient_start"
+            android:endColor="@color/tile_gradient_end"
             android:angle="90"/>
-    <corners android:radius="10px"></corners>
+    <corners android:radius="@dimen/tile_radius"></corners>
     </shape>
