--- a/Tiles/app/src/main/res/drawable/gradient.xml
+++ b/Tiles/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#620831"
-        android:endColor="#341B6C"
+        android:startColor="@color/background_gradient_start"
+        android:endColor="@color/background_gradient_end"
         android:angle="90"/>
 </shape>
