--- a/Tiles/app/src/main/res/drawable/matched_tile.xml
+++ b/Tiles/app/src/main/res/drawable/matched_tile.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/tile_matched"></solid>
-    <corners android:radius="10px"></corners>
+    <corners android:radius="@dimen/tile_radius"></corners>
 </shape>
