--- a/Tiles/app/src/main/res/layout/activity_index.xml
+++ b/Tiles/app/src/main/res/layout/activity_index.xml
@@ -15,4 +15,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="220dp"
         android:id="@+id/navigateToGame" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/resumeGame"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
