--- a/Tiles/app/src/main/res/values/dimens.xml
+++ b/Tiles/app/src/main/res/values/dimens.xml
@@ -6,5 +6,5 @@
     <dimen name="color_tile_size">60dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="tile_radius">5dp</dimen>
-    <dimen name="welcome_text">60dp</dimen>
+    <dimen name="welcome_text">60sp</dimen>
 </resources>
