--- a/Tiles/app/src/main/res/layout/activity_index.xml
+++ b/Tiles/app/src/main/res/layout/activity_index.xml
@@ -1,47 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context="com.example.saurabhpathak.tiles.IndexActivity">
-
-    <Button
-        android:text="Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="220dp"
-        android:id="@+id/navigateToGame" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/resumeGame"
-        android:layout_marginTop="50dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    tools:context="com.example.saurabhpathak.tiles.IndexActivity"
+    android:orientation="vertical">
 
     <TextView
-        android:text="Welcome to TILES"
+        android:text="@string/welcome_text"
         android:textAlignment="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="40dp"
         android:textSize="@dimen/welcome_text"
         android:id="@+id/textView"
-        android:layout_above="@+id/resumeGame"
+        android:layout_above="@+id/navigateToGame"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Button"
+        android:text="@string/start_game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/resumeGame"
-        android:layout_alignStart="@+id/resumeGame"
+        android:id="@+id/navigateToGame" />
+
+    <Button
+        android:text="@string/resume_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/resumeGame" />
+
+    <Button
+        android:text="@string/scores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/scoreBtn" />
-</RelativeLayout>
+</LinearLayout>
