--- a/Tiles/app/src/main/res/layout/activity_score.xml
+++ b/Tiles/app/src/main/res/layout/activity_score.xml
@@ -11,4 +11,41 @@
     android:background="@drawable/gradient"
     tools:context="com.example.saurabhpathak.tiles.ScoreActivity">
 
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/score2"
+        android:layout_alignStart="@+id/score1"
+        android:layout_marginTop="62dp"
+        android:id="@+id/score3" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:id="@+id/score2"
+        android:layout_below="@+id/score1"
+        android:layout_alignStart="@+id/score1" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="57dp"
+        android:id="@+id/score1"
+        android:layout_below="@+id/scoreView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="@string/score_list"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="40dp"
+        android:textSize="@dimen/welcome_text"
+        android:id="@+id/scoreView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
